# RType

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  install.bat  install.sh  merde  r-type_server  reBuild.bat  reBuild.sh
.github/workflows/: cross_compilation.yml  push_epitech.yml
assets/: public-license.txt
assets/Enemies/RedEnemy5/: Kla'ed - Wave.pdn
assets/MainMenu/Resume/: Button Active.pdn
assets/Map txtfiles/: Map Test.txt  README.txt
debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
debug/r-type_client_autogen/: mocs_compilation.cpp
debug/r-type_library_autogen/: moc_predefs.h  mocs_compilation.cpp
debug/r-type_library_autogen/PZOFR3MZST/: moc_EventSystem.cpp  moc_NetworkSystem.cpp
debug/r-type_library_autogen/UVLADIE3JM/: moc_Core.cpp  moc_UdpSocket.cpp
debug/r-type_server_autogen/: moc_predefs.h  mocs_compilation.cpp
doc/: comProtocolFormat.txt  newProtocol.md
executable/: cmake.msi:Zone.Identifier  conan.exe:Zone.Identifier
map/: Map Test.txt  Map1.txt  Map2.txt  Map3.txt  README.txt
src/: AudioDevice.cpp  AudioDevice.hpp  ButtonCallbacks.cpp  ButtonCallbacks.hpp  Camera.cpp  Camera.hpp  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Core.cpp  Core.hpp  Entity.cpp  Entity.hpp  GamepadStickCallbacks.cpp  GamepadStickCallbacks.hpp  IEntity.hpp  IScene.hpp  MapGeneration.cpp  Message.cpp  Message.hpp  Model.cpp  Model.hpp  ModelAnimation.cpp  ModelAnimation.hpp  MouseCallbacks.cpp  MouseCallbacks.hpp  Music.cpp  Music.hpp  ProtocolTraductor.cpp  ProtocolTraductor.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Shape2D.cpp  Shape2D.hpp  Shape3D.cpp  Shape3D.hpp  Sound.cpp  (+16 more)
src/components/: AIPlayer.cpp  AIPlayer.hpp  AVector.cpp  AVector.hpp  Animation2D.cpp  Animation2D.hpp  Bomb.cpp  Bomb.hpp  Bonus.hpp  Boss.cpp  Boss.hpp  Camera2DComponent.cpp  Camera2DComponent.hpp  Camera3DComponent.cpp  Camera3DComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  Component.cpp  Component.hpp  Cube.cpp  Cube.hpp  Destructible.hpp  Enemy.cpp  Enemy.hpp  EventListener.cpp  EventListener.hpp  Grid.cpp  Grid.hpp  HitboxComponent.cpp  HitboxComponent.hpp  IComponent.hpp  Missile.cpp  Missile.hpp  Model3D.hpp  ModelAnim.hpp  MusicComponent.hpp  ParticleCloud.cpp  ParticleCloud.hpp  Player.cpp  Player.hpp  (+19 more)
src/exceptions/: ArgumentError.hpp  AssetError.hpp  AudioDeviceError.hpp  MusicError.hpp  SoundError.hpp  TextureError.hpp
src/systems/: AISystem.cpp  AISystem.hpp  ANetworkSystem.cpp  ANetworkSystem.hpp  AudioSystem.cpp  AudioSystem.hpp  CollideSystem.cpp  CollideSystem.hpp  EventSystem.cpp  EventSystem.hpp  GameSystem.cpp  GameSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp  ISystem.hpp  NetworkClientSystem.cpp  NetworkClientSystem.hpp  NetworkServerSystem.cpp  NetworkServerSystem.hpp  NetworkSystem.cpp  NetworkSystem.hpp  NewGameSystem.cpp  NewGameSystem.hpp  ParticlesSystem.cpp  ParticlesSystem.hpp
test_functions/: TestAnimations2D.cpp  TestAudioDevice.cpp  TestCamera2D.cpp  TestCamera3D.cpp  TestCollisions.cpp  TestModel.cpp  TestModelAnimation.cpp  TestModelsCollision.cpp  TestMusic.cpp  TestSound.cpp  TestText.cpp  TestTextures.cpp
